--- a/templates/vlc/frontend/VLSMaker/index.html
+++ b/templates/vlc/frontend/VLSMaker/index.html
@@ -800,42 +800,34 @@
                 console.log(response); // Log the entire response to the console
 
                 if (response.valid) {
-                  // API key and Voice ID are valid, proceed to submit the form
                   text_form.submit();
                 } else {
-                  // If the API key or Voice ID is invalid, show the appropriate error and focus the field
-                  stopProcessingAnimation('#button-text'); // Stop the processing animation
+                  stopProcessingAnimation('#button-text'); 
 
-                  // button_text.text('Proceed To Scene Selection');
 
-                  if (response.error.includes('API key')) {
+                  if (response.error.toLowerCase().includes('api key')) {
                     apiKeyInput.focus();
-                    apiKeyError.text(response.error); // Show API key error
-                    //text_form.style.height = '2330px';
-                  } else if (response.error.includes('Voice')) {
+                    apiKeyError.text(response.error);
+                  } else if (response.error.toLowerCase().includes('voice')) {
                     voiceIdInput.focus();
-                    voiceIdError.text(response.error); // Show Voice ID error
-                    //text_form.style.height = '2330px';
+                    voiceIdError.text(response.error); 
                   } else {
                     apiKeyInput.focus();
-                    apiKeyError.text(response.error); // Fallback for unknown errors
-                    //text_form.style.height = '2340px';
+                    apiKeyError.text(response.error);
                   }
                 }
               },
               error: function(xhr, status, error) {
-                console.log("Error Status: ", status); // Log error status
-                console.log("Error: ", error); // Log error message
-                stopProcessingAnimation('#button-text'); // Stop the processing animation
+                console.log("Error Status: ", status); 
+                console.log("Error: ", error); 
+                stopProcessingAnimation('#button-text');
                 apiKeyError.text('Error validating the API key.');
                 apiKeyInput.focus();
                 button_text.text('Proceed To Scene Selection');
               }
             });
           } else {
-            // If either API key or Voice ID is missing, display the appropriate error and focus the field
-            stopProcessingAnimation('#button-text'); // Stop the processing animation
-            // button_text.text('Proceed To Scene Selection');
+            stopProcessingAnimation('#button-text');
 
             if (!apiKey) {
               apiKeyInput.focus();
